--- a/bi-as-code/index-prototype.html
+++ b/bi-as-code/index-prototype.html
@@ -47,6 +47,213 @@
     #root {
       height: 100%;
     }
+
+    /* Utility Classes for Markdown Preview */
+    .card {
+      background: white;
+      border: 1px solid #e5e7eb;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    }
+
+    .grid {
+      display: grid;
+      gap: 16px;
+    }
+
+    .grid-cols-1 {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+
+    .grid-cols-2 {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .grid-cols-3 {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    .grid-cols-4 {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+
+    .grid-cols-5 {
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+    }
+
+    .grid-cols-6 {
+      grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+
+    .grid-cols-7 {
+      grid-template-columns: repeat(7, minmax(0, 1fr));
+    }
+
+    .grid-cols-8 {
+      grid-template-columns: repeat(8, minmax(0, 1fr));
+    }
+
+    .grid-cols-9 {
+      grid-template-columns: repeat(9, minmax(0, 1fr));
+    }
+
+    .grid-cols-10 {
+      grid-template-columns: repeat(10, minmax(0, 1fr));
+    }
+
+    .grid-cols-11 {
+      grid-template-columns: repeat(11, minmax(0, 1fr));
+    }
+
+    .grid-cols-12 {
+      grid-template-columns: repeat(12, minmax(0, 1fr));
+    }
+
+    .grid-colspan-1 {
+      grid-column: span 1 / span 1;
+    }
+
+    .grid-colspan-2 {
+      grid-column: span 2 / span 2;
+    }
+
+    .grid-colspan-3 {
+      grid-column: span 3 / span 3;
+    }
+
+    .grid-colspan-4 {
+      grid-column: span 4 / span 4;
+    }
+
+    .grid-colspan-5 {
+      grid-column: span 5 / span 5;
+    }
+
+    .grid-colspan-6 {
+      grid-column: span 6 / span 6;
+    }
+
+    .grid-colspan-7 {
+      grid-column: span 7 / span 7;
+    }
+
+    .grid-colspan-8 {
+      grid-column: span 8 / span 8;
+    }
+
+    .grid-colspan-9 {
+      grid-column: span 9 / span 9;
+    }
+
+    .grid-colspan-10 {
+      grid-column: span 10 / span 10;
+    }
+
+    .grid-colspan-11 {
+      grid-column: span 11 / span 11;
+    }
+
+    .grid-colspan-12 {
+      grid-column: span 12 / span 12;
+    }
+
+    .grid-rowspan-1 {
+      grid-row: span 1 / span 1;
+    }
+
+    .grid-rowspan-2 {
+      grid-row: span 2 / span 2;
+    }
+
+    .grid-rowspan-3 {
+      grid-row: span 3 / span 3;
+    }
+
+    .grid-rowspan-4 {
+      grid-row: span 4 / span 4;
+    }
+
+    .grid-rowspan-5 {
+      grid-row: span 5 / span 5;
+    }
+
+    .grid-rowspan-6 {
+      grid-row: span 6 / span 6;
+    }
+
+    .info {
+      background: #eff6ff;
+      border-left: 4px solid #3b82f6;
+      padding: 16px 20px;
+      border-radius: 4px;
+      color: #1e40af;
+      margin: 16px 0;
+    }
+
+    .warning {
+      background: #fffbeb;
+      border-left: 4px solid #f59e0b;
+      padding: 16px 20px;
+      border-radius: 4px;
+      color: #92400e;
+      margin: 16px 0;
+    }
+
+    .danger {
+      background: #fef2f2;
+      border-left: 4px solid #ef4444;
+      padding: 16px 20px;
+      border-radius: 4px;
+      color: #991b1b;
+      margin: 16px 0;
+    }
+
+    .success {
+      background: #f0fdf4;
+      border-left: 4px solid #22c55e;
+      padding: 16px 20px;
+      border-radius: 4px;
+      color: #166534;
+      margin: 16px 0;
+    }
+
+    .info h1,
+    .info h2,
+    .info h3,
+    .info h4,
+    .info h5,
+    .info h6,
+    .warning h1,
+    .warning h2,
+    .warning h3,
+    .warning h4,
+    .warning h5,
+    .warning h6,
+    .danger h1,
+    .danger h2,
+    .danger h3,
+    .danger h4,
+    .danger h5,
+    .danger h6,
+    .success h1,
+    .success h2,
+    .success h3,
+    .success h4,
+    .success h5,
+    .success h6 {
+      margin-top: 0;
+      margin-bottom: 8px;
+      font-size: 1em;
+      font-weight: 600;
+    }
+
+    .info p:last-child,
+    .warning p:last-child,
+    .danger p:last-child,
+    .success p:last-child {
+      margin-bottom: 0;
+    }
   </style>
 </head>
 
@@ -1063,6 +1270,169 @@
     }
 
     // ============================================================================
+    // ALERT MESSAGE COMPONENT
+    // ============================================================================
+
+    class AlertMessage extends LitElement {
+      static properties = {
+        type: { type: String }
+      };
+
+      static styles = css`
+        :host {
+          display: block;
+          margin: 16px 0;
+        }
+        .alert {
+          padding: 16px 20px;
+          border-radius: 4px;
+          border-left: 4px solid;
+        }
+        .info {
+          background: #eff6ff;
+          border-color: #3b82f6;
+          color: #1e40af;
+        }
+        .warning {
+          background: #fffbeb;
+          border-color: #f59e0b;
+          color: #92400e;
+        }
+        .danger {
+          background: #fef2f2;
+          border-color: #ef4444;
+          color: #991b1b;
+        }
+        .success {
+          background: #f0fdf4;
+          border-color: #22c55e;
+          color: #166534;
+        }
+        ::slotted(h1), ::slotted(h2), ::slotted(h3),
+        ::slotted(h4), ::slotted(h5), ::slotted(h6) {
+          margin-top: 0;
+          margin-bottom: 8px;
+          font-size: 1em;
+          font-weight: 600;
+        }
+        ::slotted(p:last-child) {
+          margin-bottom: 0;
+        }
+      `;
+
+      constructor() {
+        super();
+        this.type = 'info';
+      }
+
+      render() {
+        return html`
+          <div class="alert ${this.type}">
+            <slot></slot>
+          </div>
+        `;
+      }
+    }
+
+    // ============================================================================
+    // CARD COMPONENT
+    // ============================================================================
+
+    class CardContainer extends LitElement {
+      static styles = css`
+        :host {
+          display: block;
+        }
+        .card {
+          background: white;
+          border: 1px solid #e5e7eb;
+          border-radius: 8px;
+          padding: 20px;
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+          height: 100%;
+        }
+      `;
+
+      render() {
+        return html`
+          <div class="card">
+            <slot></slot>
+          </div>
+        `;
+      }
+    }
+
+    // ============================================================================
+    // GRID LAYOUT COMPONENT
+    // ============================================================================
+
+    class GridLayout extends LitElement {
+      static properties = {
+        cols: { type: String },
+        gap: { type: String }
+      };
+
+      static styles = css`
+        :host {
+          display: block;
+        }
+        .grid {
+          display: grid;
+        }
+      `;
+
+      constructor() {
+        super();
+        this.cols = '2';
+        this.gap = '16px';
+      }
+
+      render() {
+        const colCount = parseInt(this.cols) || 2;
+        return html`
+          <div class="grid" style="grid-template-columns: repeat(${colCount}, minmax(0, 1fr)); gap: ${this.gap};">
+            <slot></slot>
+          </div>
+        `;
+      }
+    }
+
+    // ============================================================================
+    // GRID COLUMN COMPONENT
+    // ============================================================================
+
+    class GridCol extends LitElement {
+      static properties = {
+        span: { type: String },
+        rowspan: { type: String }
+      };
+
+      static styles = css`
+        :host {
+          display: block;
+        }
+      `;
+
+      constructor() {
+        super();
+        this.span = '1';
+        this.rowspan = '1';
+      }
+
+      render() {
+        const colSpan = parseInt(this.span) || 1;
+        const rowSpan = parseInt(this.rowspan) || 1;
+        const style = `grid-column: span ${colSpan}; grid-row: span ${rowSpan};`;
+
+        return html`
+          <div style="${style}">
+            <slot></slot>
+          </div>
+        `;
+      }
+    }
+
+    // ============================================================================
     // TEXT INPUT
     // ============================================================================
 
@@ -1880,6 +2250,85 @@ Content-Type: application/json
   "userId": 1
 }
 \`\`\`
+
+### Layout Examples with Utility Classes
+
+<grid-layout cols="2">
+  <grid-col span="1">
+    <card-container>
+      <h4>Card A</h4>
+      <p>Simple 1×1 card</p>
+    </card-container>
+  </grid-col>
+  <grid-col span="1" rowspan="2">
+    <card-container>
+      <h4>Card B</h4>
+      <p>This card spans 2 rows vertically</p>
+    </card-container>
+  </grid-col>
+  <grid-col span="1">
+    <card-container>
+      <h4>Card C</h4>
+      <p>Another 1×1 card</p>
+    </card-container>
+  </grid-col>
+  <grid-col span="2">
+    <card-container>
+      <h4>Card D</h4>
+      <p>This card spans 2 columns horizontally</p>
+    </card-container>
+  </grid-col>
+</grid-layout>
+
+### Alert Styles
+
+<alert-message type="info">
+  <strong>Information:</strong> This is an informational message with a subtle blue theme.
+</alert-message>
+
+<alert-message type="success">
+  <strong>Success:</strong> Your operation completed successfully!
+</alert-message>
+
+<alert-message type="warning">
+  <strong>Warning:</strong> Please review this information carefully before proceeding.
+</alert-message>
+
+<alert-message type="danger">
+  <strong>Error:</strong> Something went wrong. Please try again.
+</alert-message>
+
+### Complex Grid Layout
+
+<grid-layout cols="3">
+  <grid-col span="2">
+    <card-container>
+      <h4>Wide Section</h4>
+      <p>This spans 2 columns</p>
+    </card-container>
+  </grid-col>
+  <grid-col span="1">
+    <card-container>
+      <h4>Sidebar</h4>
+      <p>Single column</p>
+    </card-container>
+  </grid-col>
+  <grid-col span="1">
+    <card-container>
+      <h4>Item 1</h4>
+    </card-container>
+  </grid-col>
+  <grid-col span="1">
+    <card-container>
+      <h4>Item 2</h4>
+    </card-container>
+  </grid-col>
+  <grid-col span="1">
+    <card-container>
+      <h4>Item 3</h4>
+    </card-container>
+  </grid-col>
+</grid-layout>
 `;
       }
 
@@ -1939,6 +2388,10 @@ Content-Type: application/json
     // REGISTER CUSTOM ELEMENTS
     // ============================================================================
 
+    customElements.define("alert-message", AlertMessage);
+    customElements.define("card-container", CardContainer);
+    customElements.define("grid-layout", GridLayout);
+    customElements.define("grid-col", GridCol);
     customElements.define("text-input", TextInput);
     customElements.define("action-button", ActionButton);
     customElements.define("dropdown-select", DropdownSelect);
